# swaption_pricing_1

./: .gitignore  README.md  main.py  pyproject.toml
archive/examples_legacy/: run_black_sabr_comparison.py  run_pricing_example.py  run_risk_comparison.py  run_sabr_calibration_example.py
docs/: bermudan_lsmc_design.md  black_vs_sabr.md  market_validation_plan.md  milestone6_final_report_outline.md  project_plan.md  usd_yield_curve_proxy_template.md
examples/: run_bachelier_comparison.py  run_bermudan_lsmc.py  run_black_pricing_scenarios.py  run_calibration_stability.py  run_curve_bootstrap_example.py  run_market_curve_validation.py  run_model_risk_comparison.py  run_sabr_calibration_diagnostics.py  run_sabr_smile_scenarios.py  run_shift_sensitivity.py  run_sofr_ingestion.py  run_swap_valuation_example.py
notebooks/: black_sabr_analysis.ipynb  market_validation_workbook.ipynb  milestone1_curve_and_swap_analytics.ipynb  milestone2_black_swaption_pricing.ipynb  milestone3_sabr_smile_module.ipynb  milestone4_1_shift_sensitivity.ipynb  milestone4_2_calibration_stability.ipynb  milestone4_3_bachelier_comparison.ipynb  milestone4_overview_sabr_calibration_and_low_rate_extension.ipynb  milestone5_risk_and_hedging_across_models.ipynb  milestone7_bermudan_lsmc.ipynb
scripts/: fetch_sofr_data.py  fetch_ust_yield_curve_proxy.py
src/swaption_pricing/: __init__.py  (+19 more)
tests/: test_swaption_setup.py
usecase/: usecase_1_corporate_borrowing_hedge.ipynb  usecase_2_asset_manager_receiver_view.ipynb  usecase_3_rates_desk_smile_quoting.ipynb  usecase_4_low_rate_model_selection.ipynb
(+53 files in other folders)
